--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
     "server": "json-server --watch db.json --port 8080"
   },
   "dependencies": {
-
     "axios": "^1.5.1",
-
     "firebase": "^10.5.0",
-
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-razorpay": "^2.0.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "redux": "^4.2.1"
